fixed a bug where after creating a task box, pressing enter would refresh the page. Also made it so that the text for tasks dosent overflow in one line

--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@
     height: 200px; 
     margin: 10px;
     overflow-y: auto;
+    /*Ensures text does not overflow creating a scroll bar horozontally*/
+    word-break: normal; 
+    overflow-wrap: anywhere; 
+    white-space: normal; 
 }
 
 .add-box-bg{
